2017-08-01  Chris Dumez  <cdumez@apple.com>

        Add initial support for navigator.sendBeacon
        https://bugs.webkit.org/show_bug.cgi?id=175007
        <rdar://problem/33547728>

        Reviewed by Sam Weinig.

        Add initial support for navigator.sendBeacon behind an experimental
        feature runtime flag. The specification is available at:
        - https://w3c.github.io/beacon/

        The current implementation supports sending beacons with all types of
        payloads except for ReadableStream. Some functionality is incomplete
        and will be taken care of in follow-up patches:
        - Support for CORS preflight for the cases where it is required. We currently
          return false and do not send the beacon in such cases.
        - Better support for redirects.
        - Use a more power-friendly network priority for beacon requests.

        Tests: http/tests/blink/sendbeacon/*
               http/tests/security/mixedContent/beacon/insecure-beacon-in-iframe.html
               http/wpt/beacon/*
               imported/blink/fast/beacon/*
               imported/w3c/web-platform-tests/beacon/*

        * CMakeLists.txt:
        * DerivedSources.make:
        * Modules/beacon/NavigatorBeacon.cpp: Added.
        (WebCore::NavigatorBeacon::sendBeacon):
        * Modules/beacon/NavigatorBeacon.h: Added.
        * Modules/beacon/NavigatorBeacon.idl: Added.
        * WebCore.xcodeproj/project.pbxproj:
        * loader/PingLoader.cpp:
        (WebCore::PingLoader::sendBeacon):
        * loader/PingLoader.h:

2017-08-01  Filip Pizlo  <fpizlo@apple.com>

        Bmalloc and GC should put auxiliaries (butterflies, typed array backing stores) in a gigacage (separate multi-GB VM region)
        https://bugs.webkit.org/show_bug.cgi?id=174727

        Reviewed by Mark Lam.

        No new tests because no change in behavior.
        
        Needed to teach Metal how to allocate in the Gigacage.
