@@ -1,5 +1,11 @@
 2017-08-01  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed, update Beacon API status to "In Development".
+
+        * features.json:
+
+2017-08-01  Chris Dumez  <cdumez@apple.com>
+
         Add initial support for navigator.sendBeacon
         https://bugs.webkit.org/show_bug.cgi?id=175007
         <rdar://problem/33547728>
